# catch2-module-example

./: CMakeLists.txt  README.md
src/: catch2.ixx  catch2_macro.h  compat_example.cpp  compat_example.ixx  example.cpp  example.ixx  main.cpp
